--- a/static/static/style.css
+++ b/static/static/style.css
@@ -8,9 +8,15 @@ btn-primary {
     float: right;
     }    
 
-navbar-fixed-top{ 
+iframe {
+    width: 90%;
+    height: 500;
+    padding: 0;
+}    
+
+/* navbar-fixed-top{ 
     display:flex; 
     justify-content:flex-end; 
     width:100%; 
     padding:0;
-}
+} */
