--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -38,15 +38,14 @@
 
 <div class ="row">
     <div class="collapse" id="collapseExample">
-        <div class="card card-body">
-        here goes About
+        <div class="card card-body" id="aboutDiv">
         </div>
     </div>
 </div>
 <div class ="row">
     <div class="collapse" id="JupyterNotebook">
         <div class="card card-body">
-            <iframe src="/static/diabetes.html" title="Jupyter Notebook"></iframe>
+            <iframe src="/static/diabetes.html" title="Jupyter Notebook" height="200" width="600"></iframe>
         </div>
     </div>
 </div>
