--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row" >
-        <div class="col-md-4">
+        <div class="col-sm-8">
             <div class="page-header">
         </div>
         <form method="POST" id="userUpload" action="/userUpload">
@@ -10,6 +10,9 @@
                 <label for="userName">User Name: </label>
                 <input type="text" id="userName" name="userName" ><br><br>
       
+                <label for="userName">Age: </label>
+                <input type="number" id="age" name="age" ><br><br>
+
                 <label for="weight">Weight: </label>
                 <input type="number" id="weight" name="weight" ><br><br>
 
@@ -45,14 +48,14 @@
 <div class ="row">
     <div class="collapse" id="JupyterNotebook">
         <div class="card card-body">
-            <iframe src="/static/diabetes.html" title="Jupyter Notebook" height="200" width="600"></iframe>
+            <iframe src="/static/diabetes.html" title="Jupyter Notebook" height="1000" width="1000"></iframe>
         </div>
     </div>
 </div>
 <div class ="row">
     <div class="collapse" id="Graphs">
         <div class="card card-body">
-         here go graphs 
+            <iframe src="/static/graphs.html" title="Graphs" height="1000" width="1000"></iframe>
        </div>
     </div>
 </div>
