WIP: added user input to graph

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/utils.html" as util %}
 
-{% block title %}Diabetes Research{% endblock %}
+{% block title %}Diabetes Research With Terribly Inaccurate Prediction{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-fixed-top" style="display:flex; justify-content:flex-end; width:100%; padding:10;">
