--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -3,39 +3,40 @@
 {% block content %}
 <div class="row" >
         <div class="col-sm-8">
-            <div class="page-header">
+            <form method="POST" id="userUpload" action="/userUpload">
+                <div class="form-group">
+                    <label for="userName">User Name: </label>
+                    <input type="text" id="userName" name="userName" ><br><br>
+        
+                    <label for="userName">Age: </label>
+                    <input type="number" id="age" name="age" ><br><br>
+
+                    <label for="weight">Weight: </label>
+                    <input type="number" id="weight" name="weight" ><br><br>
+
+                    <label for="height">Height: </label>
+                    <input type="number" id="height" name="height" ><br><br>
+
+                    <label for="sugar">How About A Donut with a side of Ice Cream and Chocolate sprinkles?</label>
+                    <input type="checkbox" id="sugar" name="sugar" ><br><br>
+        
+                    <label for="acitve">Let's go for a run!</label>
+                    <input type="checkbox" id="active" name="active" ><br><br>
+        
+                    <label for="skinThickness">Do code review comments upset you?</label>
+                    <input type="checkbox" id="skinThickness" name="skinThickness" ><br><br>
+                </div>
+                <button id="btnSubmit" type="submit" class="btn btn-primary" action ="Submit">Submit </button>
+                <button id="btnGenerate" type="submit" class="btn btn-primary" action = "Generate">Or Create User </button>
+                
+                <br><br>
+                <label>User: </label>
+                <span  id="output"></span>
+            </form>
         </div>
-        <form method="POST" id="userUpload" action="/userUpload">
-            <div class="form-group">
-                <label for="userName">User Name: </label>
-                <input type="text" id="userName" name="userName" ><br><br>
-      
-                <label for="userName">Age: </label>
-                <input type="number" id="age" name="age" ><br><br>
-
-                <label for="weight">Weight: </label>
-                <input type="number" id="weight" name="weight" ><br><br>
-
-                <label for="height">Height: </label>
-                <input type="number" id="height" name="height" ><br><br>
-
-                <label for="sugar">How About A Donut with a side of Ice Cream and Chocolate sprinkles?</label>
-                <input type="checkbox" id="sugar" name="sugar" ><br><br>
-      
-                <label for="acitve">Let's go for a run!</label>
-                <input type="checkbox" id="active" name="active" ><br><br>
-      
-                <label for="skinThickness">Do code review comments upset you?</label>
-                <input type="checkbox" id="skinThickness" name="skinThickness" ><br><br>
-            </div>
-
-            <button id="btnSubmit" type="submit" class="btn btn-primary" action ="Submit">Submit </button>
-            <button id="btnGenerate" type="submit" class="btn btn-primary" action = "Generate">Or Create User </button>
-            
-            <br><br>
-            <label>User: </label>
-            <span  id="output"></span>
-        </form>
+    </div>
+    <div class="col-sm-8">
+        <div id="scatter-plot"></div>
     </div>
 </div>
 
@@ -64,5 +65,8 @@
 {% block scripts %}
 {{super()}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="{{ url_for('static', filename='app.js') }}"></script>
+<script src="{{ url_for('static', filename='Diabetes_Clean.js') }}"></script>
+<script src="{{ url_for('static', filename='plot.js') }}"></script>
 {% endblock %}
