--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 
 <div class="row" >
         <div class="col-sm-8">
+            <label for="disclaimer">Disclaimer:</label>
+                <p> This tool is not intended to replace professional medical advice, only to allow a user to make a general comparison of their information to that of the Diabetes dataset, especially since your glucose and insulin levels are randomly generated. Please see the “About” section for details on where the dataset came from. This is meant as a speculative tool to pique your interest! Talk to your doctor if you have concerns.</p>
             <form method="POST" id="userUpload" action="/userUpload">
                 <div class="form-group">
                     <label for="userName">User Name: </label>
@@ -39,6 +41,9 @@
     <div class="col-sm-8">
         <div id="scatter-plot"></div>
     </div>
+    <!-- <div class="col-sm-8">
+        <div id="scatter-plot2"></div>
+    </div> -->
 </div>
 
 <div class ="row">
