--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <form method="POST" id="userUpload" action="/userUpload">
                 <div class="form-group">
                     <label for="userName">User Name: </label>
-                    <input type="text" id="userName" name="userName" ><br><br>
+                    <input type="text" id="userName" name="userName" size=10 ><br><br>
         
                     <label for="userName">Age: </label>
                     <input type="number" id="age" name="age" ><br><br>
@@ -20,7 +20,7 @@
                     <label for="height">Height: </label>
                     <input type="number" id="height" name="height" ><br><br>
 
-                    <label for="sugar">How About A Donut with a side of Ice Cream and Chocolate sprinkles?</label>
+                    <label for="sugar">Do you like donuts?</label>
                     <input type="checkbox" id="sugar" name="sugar" ><br><br>
         
                     <label for="acitve">Let's go for a run!</label>
