--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
                     <label for="userName">Age: </label>
                     <input type="number" id="age" name="age" ><br><br>
 
-                    <label for="weight">Weight: </label>
+                    <label for="weight">Weight (lbs): </label>
                     <input type="number" id="weight" name="weight" ><br><br>
 
-                    <label for="height">Height: </label>
+                    <label for="height">Height (in): </label>
                     <input type="number" id="height" name="height" ><br><br>
 
                     <label for="sugar">Do you like donuts?</label>
