--- a/templates/index.html
+++ b/templates/index.html
@@ -2,68 +2,80 @@
 
 {% block content %}
 
-<div class="row" >
-        <div class="col-sm-8">
-            <label for="disclaimer">Disclaimer:</label>
-                <p> This tool is not intended to replace professional medical advice, only to allow a user to make a general comparison of their information to that of the Diabetes dataset, especially since your glucose and insulin levels are randomly generated. Please see the “About” section for details on where the dataset came from. This is meant as a speculative tool to pique your interest! Talk to your doctor if you have concerns.</p>
-            <form method="POST" id="userUpload" action="/userUpload">
-                <div class="form-group">
-                    <label for="userName">User Name: </label>
-                    <input type="text" id="userName" name="userName" size=10 ><br><br>
-        
-                    <label for="userName">Age: </label>
-                    <input type="number" id="age" name="age" ><br><br>
+<div class="row">
+    <div class="col-sm-8">
+        <div class="alert alert-warning">
+            <strong>Disclaimer:</strong> This tool is not intended to replace professional medical advice, only to allow
+            a user to make a general comparison of their information to that of the Diabetes dataset, especially since
+            your glucose and insulin levels are randomly generated. Please see the “About” section for details on where
+            the dataset came from. This is meant as a speculative tool to pique your interest! Talk to your doctor if
+            you have concerns.
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <form method="POST" id="userUpload" action="/userUpload">
+                    <div class="form-group">
+                        <label for="userName">User Name: </label>
+                        <input type="text" id="userName" name="userName" size=10><br><br>
 
-                    <label for="weight">Weight (lbs): </label>
-                    <input type="number" id="weight" name="weight" ><br><br>
+                        <label for="userName">Age: </label>
+                        <input type="number" id="age" name="age"><br><br>
 
-                    <label for="height">Height (in): </label>
-                    <input type="number" id="height" name="height" ><br><br>
+                        <label for="weight">Weight (lbs): </label>
+                        <input type="number" id="weight" name="weight"><br><br>
 
-                    <label for="sugar">Do you like donuts?</label>
-                    <input type="checkbox" id="sugar" name="sugar" ><br><br>
-        
-                    <label for="acitve">Let's go for a run!</label>
-                    <input type="checkbox" id="active" name="active" ><br><br>
-        
-                    <label for="skinThickness">Do code review comments upset you?</label>
-                    <input type="checkbox" id="skinThickness" name="skinThickness" ><br><br>
-                </div>
-                <button id="btnSubmit" type="submit" class="btn btn-primary" action ="Submit">Submit </button>
-                <button id="btnGenerate" type="submit" class="btn btn-primary" action = "Generate">Or Create User </button>
-                
-                <br><br>
-                <label>User: </label>
-                <span  id="output"></span>
-            </form>
+                        <label for="height">Height (in): </label>
+                        <input type="number" id="height" name="height"><br><br>
+
+                        <label for="sugar">Do you like donuts?</label>
+                        <input type="checkbox" id="sugar" name="sugar"><br><br>
+
+                        <label for="acitve">Let's go for a run!</label>
+                        <input type="checkbox" id="active" name="active"><br><br>
+
+                        <label for="skinThickness">Do code review comments upset you?</label>
+                        <input type="checkbox" id="skinThickness" name="skinThickness"><br><br>
+                    </div>
+                    <button id="btnSubmit" type="submit" class="btn btn-primary" action="Submit">Submit </button>
+                    <button id="btnGenerate" type="submit" class="btn btn-primary" action="Generate">Or Create User
+                    </button>
+
+                    <br><br>
+                    <label>User: </label>
+                    <span id="output"></span>
+                </form>
+            </div>
+            
+            <div class="col-sm-8">
+                <div id="scatter-plot"></div>
+            </div>
         </div>
     </div>
-    <div class="col-sm-8">
-        <div id="scatter-plot"></div>
-    </div>
-    <!-- <div class="col-sm-8">
+</div>
+
+<!-- <div class="col-sm-8">
         <div id="scatter-plot2"></div>  
     </div> -->
 </div>
 
-<div class ="row">
+<div class="row">
     <div class="collapse" id="collapseExample">
         <div class="card card-body" id="aboutDiv">
         </div>
     </div>
 </div>
-<div class ="row">
+<div class="row">
     <div class="collapse" id="JupyterNotebook">
         <div class="card card-body">
             <iframe src="/static/diabetes.html" title="Jupyter Notebook" height="1000" width="1000"></iframe>
         </div>
     </div>
 </div>
-<div class ="row">
+<div class="row">
     <div class="collapse" id="Graphs">
         <div class="card card-body">
             <iframe src="/static/graphs.html" title="Graphs" height="1000" width="1000"></iframe>
-       </div>
+        </div>
     </div>
 </div>
 {% endblock %}
