--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <span id="output"></span>
                 </form>
             </div>
-            
+
             <div class="col-sm-8">
                 <div id="scatter-plot"></div>
             </div>
@@ -60,7 +60,11 @@
 
 <div class="row">
     <div class="collapse" id="collapseExample">
-        <div class="card card-body" id="aboutDiv">
+        <div class="col-lg-10">
+            <div class="card" style="width: 100rem;"> 
+                <div class="card card-body" id="aboutDiv" style="padding-left: 2cm;">
+                </div>
+            </div>
         </div>
     </div>
 </div>
